# EvoPrior-AIVC

./: .env.example  .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml
docker/: Dockerfile.gears  README_GEARS_ENV.md
docs/: BENCHMARKS.md  BENCHMARK_CARD.md  CLAIMS_AND_EVIDENCE.md  CODEX_HANDOFF.md  CODEX_SESSION_PROTOCOL.md  DATA.md  DATASETS.md  DATASET_SCOUTING_V03.md  EXPERIMENT_LEDGER.md  KNOWN_FAILURES.md  KNOWN_LIMITATIONS.md  LITERATURE_MAP.md  MODEL_CARD.md  PROJECT_SPEC.md  PUBLIC_BENCHMARK_ALIGNMENT_V04.md  REPRODUCIBILITY.md  TECHNICAL_REVIEW_MAP.md  V04_BASELINE_AUDIT.md  V05_LINEAGE_PRIOR_DESIGN.md  V05_MULTICELL_DATASET_REQUIREMENTS.md  V05_REAL_MULTICELL_DATASET_SCOUTING.md  V06_LINEAGE_REAL_BENCHMARK_DESIGN.md  V06_REAL_MULTICELL_DATASET_SELECTION.md  V07_GENE_EVOLUTIONARY_PRIOR_DESIGN.md  V07_GENE_PRIOR_ABLATION_PLAN.md  V07_GENE_PRIOR_SOURCES.md  V08_REAL_GENE_PRIOR_COVERAGE_REPORT.md  V08_REAL_GENE_PRIOR_SOURCE_DESIGN.md  V09_ABLATION_PLAN.md  V09_INTEGRATED_EVOPRIOR_ADDITIVE_DESIGN.md  V10_EVIDENCE_TABLE_SCHEMA.md  V10_PUBLIC_BENCHMARK_ALIGNMENT_PLAN.md  V11_EXTERNAL_PUBLIC_BENCHMARK_INGESTION_PLAN.md  V11_PUBLIC_BENCHMARK_DATA_CONTRACT.md  V12_BENCHMARK_UNBLOCK_LOG.md  V12_PUBLIC_BENCHMARK_BASELINE_RUN.md  V13_BENCHMARK_ALIGNMENT_AUDIT.md  V13_GEARS_NORMAN_BASELINE.md  V13_SUBMISSION_PACKAGE.md  V14_EXTERNAL_REVIEW_PACKAGE.md  (+49 more)
notebooks/: README.md
reports/: v0.13_gears_norman_baseline_summary.md  v0.14_gears_norman_external_summary.md  v0.15_fast_neural_norman_summary.md  (+15 more)
(+196 files in other folders)
