[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "evoprior-aivc"
version = "0.2.0"
description = "Evolutionary- and lineage-prior-enhanced AI Virtual Cell research scaffold."
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "EvoPrior-AIVC contributors" }
]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "anndata>=0.10",
  "pyyaml>=6.0",
  "tqdm>=4.66"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5"
]
singlecell = [
  "scanpy>=1.10"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
